src/main/java/com/rakovets/course/java/core/example/data_types/Example6KeywordVar.java
package com.rakovets.course.java.core.example.data_types;

public class Example6KeywordVar {
    public static void main(String[] args) {
        var x = 10;
        System.out.println(x); // 10

//        var y; // error: cannot infer type for local variable y
//        y = 10;
    }
}
